--- a/extension/popup.html
+++ b/extension/popup.html
@@ -18,7 +18,8 @@
         margin: 0 0 12px;
       }
 
-      label {
+      label,
+      .toggle {
         display: block;
         font-size: 13px;
         margin-bottom: 6px;
@@ -45,6 +46,28 @@
         min-height: 16px;
       }
 
+      .button {
+        width: 100%;
+        border: none;
+        border-radius: 6px;
+        padding: 8px 12px;
+        font-size: 14px;
+        font-weight: 600;
+        cursor: pointer;
+        margin: 12px 0 8px;
+        color: #fff;
+        background: #2563eb;
+        transition: background 0.2s ease;
+      }
+
+      .button.is-off {
+        background: #475569;
+      }
+
+      .button:active {
+        transform: translateY(1px);
+      }
+
       .credit {
         font-size: 12px;
         margin-top: 12px;
@@ -60,21 +83,31 @@
   <body>
     <h1>FuOverflow Auto Downloader</h1>
 
-    <label for="autoAdvanceLimit">Total images per batch</label>
-    <input
-      type="number"
-      id="autoAdvanceLimit"
-      min="1"
-      max="999"
-      step="1"
-      inputmode="numeric"
-      placeholder="e.g. 50"
-    />
+    <div class="group">
+      <label for="autoAdvanceLimit">Total images per batch</label>
+      <input
+        type="number"
+        id="autoAdvanceLimit"
+        min="1"
+        max="999"
+        step="1"
+        inputmode="numeric"
+        placeholder="e.g. 50"
+      />
+    </div>
     <p class="hint">
       When the gallery exposes <code>&lt;span data-fancybox-count&gt;</code> the extension uses that value automatically.
       This field only acts as a fallback: the first click counts as image #1, so it auto-nexts <code>value - 1</code> times
       (Example: 50 => auto Next 49 times).
     </p>
+
+    <div class="group">
+      <label class="toggle">
+        <input type="checkbox" id="autoDownloadEnabled" />
+        Auto download attachments
+      </label>
+    </div>
+    <button type="button" id="extensionToggleBtn" class="button">Disable extension</button>
     <div class="status" id="status"></div>
 
     <p class="credit">
