--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,115 +4,284 @@
     <meta charset="UTF-8" />
     <title>FuOverflow Auto Downloader</title>
     <style>
+      :root {
+        color-scheme: light dark;
+        --bg: linear-gradient(135deg, #f5f7ff, #edf2fb);
+        --panel: #ffffff;
+        --panel-border: rgba(15, 23, 42, 0.08);
+        --text: #0f172a;
+        --muted: #5b6989;
+        --accent: #2563eb;
+        --accent-strong: #1d4ed8;
+        --success: #0f766e;
+        --danger: #dc2626;
+      }
+
       body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        font-family: "Inter", "Segoe UI", system-ui, sans-serif;
         margin: 0;
-        padding: 16px;
-        width: 280px;
-        background: #f7f9fc;
-        color: #0f172a;
+        padding: 18px;
+        width: 320px;
+        min-height: 100%;
+        background: var(--bg);
+        color: var(--text);
+      }
+
+      .panel {
+        background: var(--panel);
+        border-radius: 16px;
+        padding: 18px;
+        box-shadow: 0 10px 30px rgba(15, 23, 42, 0.08);
+        border: 1px solid var(--panel-border);
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+      }
+
+      .header {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+
+      .badge {
+        width: 42px;
+        height: 42px;
+        border-radius: 12px;
+        background: radial-gradient(circle at 30% 30%, #5e8bff, var(--accent));
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        font-weight: 700;
+        letter-spacing: 0.02em;
+        font-size: 14px;
       }
 
       h1 {
-        font-size: 16px;
-        margin: 0 0 12px;
+        font-size: 15px;
+        margin: 0;
+        line-height: 1.3;
       }
 
-      label,
-      .toggle {
-        display: block;
-        font-size: 13px;
-        margin-bottom: 6px;
+      .subtitle {
+        font-size: 12px;
+        color: var(--muted);
+        margin: 2px 0 0;
+      }
+
+      .group {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+      }
+
+      label {
+        font-size: 12px;
+        text-transform: uppercase;
+        letter-spacing: 0.08em;
+        color: var(--muted);
       }
 
       input[type="number"] {
         width: 100%;
-        padding: 6px 8px;
+        padding: 10px 12px;
         font-size: 14px;
-        border: 1px solid #cbd5f5;
-        border-radius: 4px;
+        border: 1px solid rgba(37, 99, 235, 0.2);
+        border-radius: 10px;
         box-sizing: border-box;
+        transition: border 0.2s ease, box-shadow 0.2s ease;
+        background: rgba(37, 99, 235, 0.04);
+        color: var(--text);
+      }
+
+      input[type="number"]:focus {
+        outline: none;
+        border-color: var(--accent);
+        box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.2);
       }
 
       .hint {
         font-size: 12px;
-        margin: 6px 0 12px;
-        color: #475569;
+        margin: -4px 0 6px;
+        color: var(--muted);
+        line-height: 1.5;
+      }
+
+      .toggle-row {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 12px;
+        border-radius: 12px;
+        border: 1px solid rgba(15, 23, 42, 0.08);
+        background: rgba(15, 23, 42, 0.02);
+      }
+
+      .toggle-row span {
+        font-size: 13px;
+        font-weight: 500;
+      }
+
+      .switch {
+        position: relative;
+        width: 44px;
+        height: 24px;
+      }
+
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        inset: 0;
+        background-color: rgba(15, 23, 42, 0.3);
+        border-radius: 999px;
+        transition: background 0.2s ease;
+      }
+
+      .slider::before {
+        content: "";
+        position: absolute;
+        height: 18px;
+        width: 18px;
+        left: 4px;
+        bottom: 3px;
+        background-color: #fff;
+        border-radius: 50%;
+        transition: transform 0.2s ease;
+        box-shadow: 0 4px 8px rgba(15, 23, 42, 0.2);
+      }
+
+      .switch input:checked + .slider {
+        background-color: var(--accent);
+      }
+
+      .switch input:checked + .slider::before {
+        transform: translateX(18px);
+      }
+
+      .button {
+        border: none;
+        border-radius: 12px;
+        padding: 12px 16px;
+        font-size: 14px;
+        font-weight: 600;
+        cursor: pointer;
+        color: #fff;
+        background: linear-gradient(120deg, var(--accent), var(--accent-strong));
+        transition: transform 0.15s ease, filter 0.2s ease;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+      }
+
+      .button:hover {
+        filter: brightness(1.05);
+      }
+
+      .button:active {
+        transform: scale(0.99);
+      }
+
+      .button.is-off {
+        background: linear-gradient(120deg, #94a3b8, #475569);
       }
 
       .status {
         font-size: 12px;
-        color: #0f766e;
+        color: var(--success);
         min-height: 16px;
+        display: flex;
+        align-items: center;
+        gap: 6px;
       }
 
-      .button {
-        width: 100%;
-        border: none;
-        border-radius: 6px;
-        padding: 8px 12px;
-        font-size: 14px;
-        font-weight: 600;
-        cursor: pointer;
-        margin: 12px 0 8px;
-        color: #fff;
-        background: #2563eb;
-        transition: background 0.2s ease;
-      }
-
-      .button.is-off {
-        background: #475569;
-      }
-
-      .button:active {
-        transform: translateY(1px);
+      .status::before {
+        content: "";
+        width: 6px;
+        height: 6px;
+        border-radius: 50%;
+        background: currentColor;
       }
 
       .credit {
-        font-size: 12px;
-        margin-top: 12px;
-        color: #475569;
+        font-size: 11px;
+        color: var(--muted);
+        text-align: center;
       }
 
       .credit a {
-        color: #2563eb;
+        color: var(--accent);
         text-decoration: none;
+        font-weight: 600;
+      }
+
+      code {
+        font-family: "JetBrains Mono", Consolas, monospace;
+        font-size: 12px;
+        background: rgba(15, 23, 42, 0.05);
+        padding: 1px 4px;
+        border-radius: 4px;
       }
     </style>
   </head>
   <body>
-    <h1>FuOverflow Auto Downloader</h1>
+    <div class="panel">
+      <header class="header">
+        <div class="badge">Fu</div>
+        <div>
+          <h1>FuOverflow Auto Downloader</h1>
+          <p class="subtitle">Giữ các bộ sưu tập luôn nằm trong tay bạn</p>
+        </div>
+      </header>
 
-    <div class="group">
-      <label for="autoAdvanceLimit">Total images per batch</label>
-      <input
-        type="number"
-        id="autoAdvanceLimit"
-        min="1"
-        max="999"
-        step="1"
-        inputmode="numeric"
-        placeholder="e.g. 50"
-      />
+      <div class="group">
+        <label for="autoAdvanceLimit">Total images per batch</label>
+        <input
+          type="number"
+          id="autoAdvanceLimit"
+          min="1"
+          max="999"
+          step="1"
+          inputmode="numeric"
+          placeholder="e.g. 50"
+        />
+        <p class="hint">
+          Nếu gallery có <code>&lt;span data-fancybox-count&gt;</code> thì giá trị này
+          sẽ được lấy tự động. Ô này chỉ là phương án dự phòng để giới hạn số lần
+          nhảy ảnh (<code>value - 1</code> lần sau khi bấm đầu tiên).
+        </p>
+      </div>
+
+      <div class="toggle-row">
+        <span>Auto download attachments</span>
+        <label class="switch">
+          <input type="checkbox" id="autoDownloadEnabled" />
+          <span class="slider"></span>
+        </label>
+      </div>
+
+      <button type="button" id="extensionToggleBtn" class="button">
+        Disable extension
+      </button>
+      <div class="status" id="status"></div>
+
+      <p class="credit">
+        Crafted by
+        <a
+          href="https://github.com/longurara"
+          target="_blank"
+          rel="noopener noreferrer"
+          >github.com/longurara</a
+        >
+      </p>
     </div>
-    <p class="hint">
-      When the gallery exposes <code>&lt;span data-fancybox-count&gt;</code> the extension uses that value automatically.
-      This field only acts as a fallback: the first click counts as image #1, so it auto-nexts <code>value - 1</code> times
-      (Example: 50 => auto Next 49 times).
-    </p>
-
-    <div class="group">
-      <label class="toggle">
-        <input type="checkbox" id="autoDownloadEnabled" />
-        Auto download attachments
-      </label>
-    </div>
-    <button type="button" id="extensionToggleBtn" class="button">Disable extension</button>
-    <div class="status" id="status"></div>
-
-    <p class="credit">
-      Credit: <a href="https://github.com/longurara" target="_blank" rel="noopener noreferrer">github.com/longurara</a>
-    </p>
 
     <script src="popup.js"></script>
   </body>
